fixed another alignment issue

--- a/src/css/MainSection.css
+++ b/src/css/MainSection.css
@@ -63,7 +63,7 @@
 .friend-section {
     display: grid;
     grid-template-columns: 2.5fr 1fr;
-    height: 92.9vh;
+    height: 90vh;
 }
 
 .friend-list {
